--- a/test.yml
+++ b/test.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: gassino
   gather_facts: false # Optional, speeds up the playbook if you don't need facts
   tasks:
     - name: Test connection
