--- a/check_vm.yml
+++ b/check_vm.yml
@@ -5,19 +5,19 @@
 
   tasks:
     - name: Check kubelet service
-      community.general.systemd:
+      community.general:
         name: kubelet
         state: started
       register: kubelet_status
   
     - name: Check the status of sshd
-      community.general.systemd:
+      community.general:
         name: sshd
         state: started
       register: sshd_status
 
     - name: Check firewalld service
-      community.general.systemd:
+      community.general:
         name: firewalld
         state: started
       register: firewalld_status
