--- a/check_vm.yml
+++ b/check_vm.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - name: Get list of all nodes
-      nofusscomputing.kubernetes:
+      kubernetes.core:
         api_version: v1
         kind: Node
       register: nodes
@@ -17,7 +17,7 @@
       loop: "{{ nodes.resources }}"
 
     - name: Get list of all pods
-      nofusscomputing.kubernetes:
+      kubernetes.core:
         api_version: v1
         kind: Pod
       register: pods
