--- a/check.yml
+++ b/check.yml
@@ -13,7 +13,8 @@
   - name: Add the user 'james' with a bash shell, appending the group 'adm' and 'sudo' to the user's groups
     ansible.builtin.user:
     name: james
-    groups: admins,sudo
+    shell: /bin/bash
+    groups: adm,sudo
     append: yes
 
 - name: SSH verification
