--- a/check.yml
+++ b/check.yml
@@ -10,13 +10,16 @@
       dest: /tmp/test.yml
       mode: '0644'
 
-  - name: Add the user 'james' with a bash shell, appending the group 'adm' and 'sudo' to the user's groups
+  - name: Add the user 'james' with a bash shell, appending the group 'adm' and 'cockpit-ws' to the user's groups
     ansible.builtin.user:
     name: james
+    comment: James Doe
     shell: /bin/bash
-    groups: adm,sudo
+    group: adm
+    groups: adm,cockpit-ws
+    uid: 1040
     append: yes
-
+   
 - name: SSH verification
   hosts: all
   become: yes
