--- a/check.yml
+++ b/check.yml
@@ -12,12 +12,12 @@
 
   - name: Add user
     ansible.builtin.user:
-    name: james
-    comment: James Doe
-    shell: /bin/bash
-    group: adm
-    uid: 1040
-    append: yes
+      name: james
+      comment: James Doe
+      shell: /bin/bash
+      groups: adm,cockpit-ws
+      uid: 1040
+      append: yes
    
 - name: SSH verification
   hosts: all
